--- a/IMTools/example.qrc
+++ b/IMTools/example.qrc
@@ -198,5 +198,6 @@
         <file>res/image/ic_crash.png</file>
         <file>qml/window/CrashWindow.qml</file>
         <file>qml/page/T_SplitLayout.qml</file>
+        <file>qml-Qt6/pane/MainTopPane.qml</file>
     </qresource>
 </RCC>
