--- a/IMTools/example.qrc
+++ b/IMTools/example.qrc
@@ -218,5 +218,6 @@
         <file>res/svg/Tool.svg</file>
         <file>res/svg/Variable.svg</file>
         <file>res/svg/Work.svg</file>
+        <file>qml-Qt6/pane/MainBottomPane.qml</file>
     </qresource>
 </RCC>
